Ponto mudança estrutural

--- a/index.html
+++ b/index.html
@@ -99,25 +99,6 @@
                     </div>
                 </div>
 
-                <div id="videoModal" class="modal">
-                    <div class="modal-content">
-                        <button id="closeModal" class="close-button" aria-label="Fechar vídeo">&times;</button>
-                        <video id="surpresaVideo" controls preload="none">
-                            <source src="convite.mp4" type="video/mp4">
-                            Seu navegador não suporta vídeos HTML5.
-                        </video>
-                    </div>
-                </div>
-
-                <!-- Modal de Orientação -->
-                <div id="orientationModal" class="modal">
-                    <div class="orientation-modal-content">
-                        <svg class="rotate-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 15.5C20 18.5376 17.5376 21 14.5 21C11.4624 21 9 18.5376 9 15.5V8.5C9 5.46243 11.4624 3 14.5 3C17.5376 3 20 5.46243 20 8.5" stroke="white" stroke-width="1.5" stroke-linecap="round"/><path d="M16.436 12.1824L14.5 14.1184L12.564 12.1824" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M4 8C4 5.23858 6.23858 3 9 3H9.5" stroke="white" stroke-width="1.5" stroke-linecap="round"/></svg>
-                        <h2>Vire a tela, por favor!</h2>
-                        <p>Para uma melhor experiência, gire seu dispositivo para assistir ao vídeo.</p>
-                    </div>
-                </div>
-
                 <div id="confirmarPresenca">
                     <h2>Confirme sua presença!</h2>
                     <p>Clique no botão abaixo para enviar sua confirmação via WhatsApp</p>
@@ -135,6 +116,25 @@
     <!-- Ícones Flutuantes -->
     <img src="./escudo.png" alt="Escudo da Mulher Maravilha" class="floating-icon" id="escudoIcon">
     <img src="./estrela.png" alt="Estrela da Mulher Maravilha" class="floating-icon" id="estrelaIcon">
+
+    <!-- Modals movidos para o final do body para estabilidade de layout -->
+    <div id="videoModal" class="modal">
+        <div class="modal-content">
+            <button id="closeModal" class="close-button" aria-label="Fechar vídeo">&times;</button>
+            <video id="surpresaVideo" controls preload="none">
+                <source src="convite.mp4" type="video/mp4">
+                Seu navegador não suporta vídeos HTML5.
+            </video>
+        </div>
+    </div>
+
+    <div id="orientationModal" class="modal">
+        <div class="orientation-modal-content">
+            <svg class="rotate-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 15.5C20 18.5376 17.5376 21 14.5 21C11.4624 21 9 18.5376 9 15.5V8.5C9 5.46243 11.4624 3 14.5 3C17.5376 3 20 5.46243 20 8.5" stroke="white" stroke-width="1.5" stroke-linecap="round"/><path d="M16.436 12.1824L14.5 14.1184L12.564 12.1824" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M4 8C4 5.23858 6.23858 3 9 3H9.5" stroke="white" stroke-width="1.5" stroke-linecap="round"/></svg>
+            <h2>Vire a tela, por favor!</h2>
+            <p>Para uma melhor experiência, gire seu dispositivo para assistir ao vídeo.</p>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
