Ponto mudança estrutural- alinhar todos esses itens no centro

--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
 
     <div id="orientationModal" class="modal">
         <div class="orientation-modal-content">
+            <button id="closeOrientation" class="close-button" aria-label="Fechar orientação">&times;</button>
             <svg class="rotate-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 15.5C20 18.5376 17.5376 21 14.5 21C11.4624 21 9 18.5376 9 15.5V8.5C9 5.46243 11.4624 3 14.5 3C17.5376 3 20 5.46243 20 8.5" stroke="white" stroke-width="1.5" stroke-linecap="round"/><path d="M16.436 12.1824L14.5 14.1184L12.564 12.1824" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M4 8C4 5.23858 6.23858 3 9 3H9.5" stroke="white" stroke-width="1.5" stroke-linecap="round"/></svg>
-            <h2>Vire a tela, por favor!</h2>
+            <h2>Vire o seu celular</h2>
             <p>Para uma melhor experiência, gire seu dispositivo para assistir ao vídeo.</p>
         </div>
     </div>
